app bar vertical align fixes

--- a/src/components/appbar/appbar.styles.css
+++ b/src/components/appbar/appbar.styles.css
@@ -44,6 +44,7 @@
 .appbar-logo {
   font-weight: 700;
   color: #ffffff3b;
+  display: flex;
 }
 
 .appbar-user-menu-container {
