--- a/src/components/notification-icon/notification-icon.styles.css
+++ b/src/components/notification-icon/notification-icon.styles.css
@@ -1,4 +1,8 @@
 .notification-icon {
-  font-size: 25px;
+  font-size: 20px;
   color: #636a71;
+}
+
+.notification-icon-container {
+	display: flex;
 }
